--- a/HaleyDB/HaleyDB.csproj
+++ b/HaleyDB/HaleyDB.csproj
@@ -25,4 +25,16 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Haley.Helpers" Version="2.1.16.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="MySql.Data" Version="8.3.0" />
+    <PackageReference Include="Npgsql" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interface\" />
+  </ItemGroup>
+
 </Project>
