--- a/HaleyDB.Test/HaleyDB.Test.csproj
+++ b/HaleyDB.Test/HaleyDB.Test.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HaleyDB\HaleyDB.csproj" />
   </ItemGroup>
 
