--- a/HaleyHelpersDB/HaleyHelpersDB.csproj
+++ b/HaleyHelpersDB/HaleyHelpersDB.csproj
@@ -39,4 +39,8 @@
     <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Storage\" />
+  </ItemGroup>
+
 </Project>
