--- a/HaleyHelpersDB/HaleyHelpersDB.csproj
+++ b/HaleyHelpersDB/HaleyHelpersDB.csproj
@@ -38,6 +38,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="MySqlConnector" Version="2.3.7" />
