--- a/HaleyHelpersDB/HaleyHelpersDB.csproj
+++ b/HaleyHelpersDB/HaleyHelpersDB.csproj
@@ -13,7 +13,7 @@
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\HaleyProject\HaleyProject.snk</AssemblyOriginatorKeyFile>
     <PackageIcon>Haley.png</PackageIcon>
-    <Version>0.0.23</Version>
+    <Version>0.0.24</Version>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageProjectUrl>https://github.com/TheHaleyProject/HaleyHelpers.DB</PackageProjectUrl>
@@ -46,7 +46,7 @@
   </ItemGroup>
 
   <Import Project="$(SolutionDir)ProjectReferences_$(SolutionName).txt" Condition="Exists('$(SolutionDir)ProjectReferences_$(SolutionName).txt')" />
-  <!--<Choose>
+  <Choose>
     <When Condition="Exists($(HaleyAbstractions))">
       <ItemGroup>
         <ProjectReference Include="$(HaleyAbstractions)\HaleyAbstractions.csproj">
@@ -56,10 +56,10 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <PackageReference Include="Haley.Abstractions" Version="1.2.0" />
+        <PackageReference Include="Haley.Abstractions" Version="1.2.8" />
       </ItemGroup>
     </Otherwise>
-  </Choose>-->
+  </Choose>
   <Choose>
     <When Condition="Exists($(HaleyHelpers))">
       <ItemGroup>
